--- a/package.json
+++ b/package.json
@@ -14,14 +14,11 @@
         "start": "node server.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "concurrently \"npm run server\" \"npm run client\"",
-        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm install --prefix client && npm run build --prefix client"
     },
     "author": "BAHRI Mekki",
     "license": "MIT",
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.36",
-        "@fortawesome/free-solid-svg-icons": "^5.15.4",
-        "@fortawesome/react-fontawesome": "^0.1.15",
         "bcrypt": "^5.0.1",
         "concurrently": "^6.2.1",
         "dateformat": "^4.5.1",
