--- a/config/.env
+++ b/config/.env
@@ -5,3 +5,7 @@ HOST_NODEMAILER="smtp.gmail.com"
 PORT_NODEMAILER=587
 USER_NODEMAILER="htmlphp2@gmail.com"
 PASS_NODEMAILER="react123js456"
+CLIENT_ID="489115690816-tfo4ut493rpc6itug1qsc3cij8k41s2j.apps.googleusercontent.com"
+CLIENT_SECRET="eJ9NfHq0G66_7fVNNVGlTh9P"
+REDIRECT_URL="https://developers.google.com/oauthplayground"
+REFRECH_TOKEN="1//048RAyDsljQ8ACgYIARAAGAQSNwF-L9Iret1UpG2boKVxu-XfBRO0cDqOz3AkQBhYdy738r5lyLy4BMFm0Tgr9e45XqKc8t_swkc"
