--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-validator": "^6.12.1",
+        "googleapis": "^87.0.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.6",
         "nodemailer": "^6.6.3",
