--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ node_modules
 .env.development.local
 .env.test.local
 .env.production.local
-# .env
-# package-lock.json
+.env
+package-lock.json
 
 npm-debug.log*
 yarn-debug.log*
